Overflow fixed

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -1,3 +1,4 @@
 .main_content{
     background-color: aqua;
+    overflow: hidden;
 }
